--- a/styles/main.css
+++ b/styles/main.css
@@ -1,30 +1,2 @@
-.criminalsContainer{
-    display:flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-.criminalsHeading{
-    justify-content: center;
-}
-
-.criminal {
-    border: dotted;
-    height: 10em;
-    width: 17em;
-    margin: 2em;
-    padding: 1em;
-}
-
-.officersContainer{
-    display:flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-
-.officer {
-    border: dotted;
-    height: 10em;
-    width: 17em;
-    margin: 2em;
-    padding: 1em;
-}
+@import "./criminals.css";
+@import "./officers.css" 
