--- a/styles/main.css
+++ b/styles/main.css
@@ -1,2 +1,47 @@
 @import "./criminals.css";
-@import "./officers.css" 
+@import "./officers.css";
+@import "./filters.css";
+@import "./notes.css";
+
+@import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
+
+body,
+button,
+input,
+select,
+textarea {
+	color: #41B3A3;
+	font-family: "Comfortaa", Arial, sans-serif;
+	font-size: 1rem;
+	line-height: 1.5;
+}
+
+textarea {
+    width: 30rem;
+    height: 7rem;
+}
+
+.input--text {
+    width: 30rem;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: "Patua One", serif;
+  letter-spacing: 2px;
+  color:  #c38d9e;
+}
+
+.lists {
+    display: flex;
+    flex-direction: row;
+}
+
+.criminalsContainer {
+    flex: 4
+}
+
+.noteListContainer {
+    flex: 1
+}
+
+
