--- a/styles/main.css
+++ b/styles/main.css
@@ -25,7 +25,7 @@ textarea {
     width: 30rem;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,h2,h3,h5 {
   font-family: "Patua One", serif;
   letter-spacing: 2px;
   color:  #c38d9e;
